# safe-as-houses

.github/workflows/: ci.yaml  docker-build.yaml
deploy/: README.md  config.yaml  elastic.yaml  ingest.yaml  ingress.yaml  kibana.yaml  kustomization.yaml  letsencrypt.yaml  server.yaml  server.yaml.orig
house_ingest/: .bumpversion.cfg  .env.example  CONTRIBUTING.rst  Dockerfile  README.rst  pyproject.toml  tasks.py
house_ingest/.github/: ISSUE_TEMPLATE.md
house_ingest/docs/: conf.py  index.rst  installation.rst  usage.rst
house_ingest/house_ingest/: __init__.py  cli.py  config.py  elastic.py  house_data.py  house_ingest.py  models.py
house_ingest/house_ingest/resources/: index-config.json  relevance_query.json
house_ingest/scripts/: docker-entrypoint.sh
house_ingest/tests/: __init__.py  test_house_ingest.py
localenv/: docker-compose.yml
scrapemove-ui/: Dockerfile  build.sbt
scrapemove-ui/.bsp/: sbt.json
scrapemove-ui/project/: plugins.sbt
scrapemove-ui/src/main/resources/: application.conf
scrapemove-ui/src/main/scala/com/hunorkovacs/ziohttp4stry/: Main.scala
scrapemove-ui/src/main/scala/com/hunorkovacs/ziohttp4stry/config/: Settings.scala
scrapemove-ui/src/main/scala/com/hunorkovacs/ziohttp4stry/models/: AppExceptions.scala  DocumentId.scala  FilterMethod.scala  PropertyDetails.scala  QueryParamUpdater.scala  SearchParams.scala  UserId.scala
scrapemove-ui/src/main/scala/com/hunorkovacs/ziohttp4stry/services/: Html.scala  Search.scala
scrapemove-ui/src/main/scala/com/hunorkovacs/ziohttp4stry/utils/: Configs.scala  Extensions.scala
server/: .gitignore  build.sbt
server/src/main/scala/com/briggysmalls/scrapemove/: OwlServer.scala
